--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Anastasiia-Chikrizova.github.io/Event-booster",
+  "homepage": "https://aleksandrkorzun.github.io/event-booster/",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /Event-booster/",
+    "build": "parcel build src/*.html --public-url /event-booster/",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Anastasiia-Chikrizova/Event-booster"
+    "url": "git+https://github.com/AleksandrKorzun/event-booster"
   },
   "keywords": [],
   "author": "Dream Team",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Anastasiia-Chikrizova/Event-booster"
+    "url": "https://github.com/AleksandrKorzun/event-booster"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
